--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "gapi-script": "^1.2.0",
     "glightbox": "^3.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
