--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "glightbox": "^3.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.2"
@@ -25,8 +26,8 @@
     "@eslint/js": "^9.36.0",
     "@types/aos": "^3.0.7",
     "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
