--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "framer-motion": "^12.25.0",
     "gapi-script": "^1.2.0",
     "glightbox": "^3.3.1",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
